# ELF-Linker-for-a-Custom-Object-Format

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
docs/: dwarf-notes.md
src/: Driver.cpp  Driver.h  main.cpp
src/elf/: ElfReader.cpp  ElfReader.h  ElfTypes.h
src/model/: InputObject.cpp  InputObject.h  InputSection.h  OutputImage.cpp  OutputImage.h  OutputSection.h  Relocation.h  Symbol.h
src/passes/: ApplyRelocations.cpp  AssignAddresses.cpp  EmitExecutable.cpp  MergeSections.cpp  ParseObjects.cpp  Passes.h  ResolveSymbols.cpp
src/util/: Error.cpp  Error.h  Log.h
tests/: Dockerfile.dev  run_tests.sh
tests/programs/01_hello_freestanding/: hello.c
tests/programs/02_two_tu_extern/: main.c  math.c
tests/programs/03_weak_symbols/: lib.c  main.c  override.c
tests/programs/04_rodata_data_bss/: main.c
tests/programs/05_debug_breakpoint/: main.c
